add extra perks page

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^3.7.4",
     "react": "~15.4.1",
     "react-native": "0.39.0",
+    "react-native-back-android": "^3.0.0",
     "react-native-deprecated-custom-components": "^0.1.0"
   },
   "devDependencies": {
